# whatsup

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: actions.yml
src/whatsup/: cli.py  db.py  tasks.py
tests/: test_cli.py  test_db.py  test_tasks.py
