[project]
name = "whatsup"
version = "0.0.1"
description = "Simple task tracker"
authors = [
    {name = "Pavel", email = "60060559+pyrogn@users.noreply.github.com"},
]
dependencies = [
    "typer[all]>=0.9.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
whatsup = "whatsup.cli:app"
wup = "whatsup.cli:quick_app"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.2",
]
lint = [
    "ruff>=0.0.289",
    "black>=23.9.1",
    "pre-commit>=3.4.0",
]
type = [
    "mypy>=1.5.1",
    "pyright>=1.1.327",
]
