[project]
name = "whatsup"
version = "0.0.1"
description = "Simple task tracker"
authors = [
    {name = "Pavel", email = "60060559+pyrogn@users.noreply.github.com"},
]
dependencies = [
    "typer[all]>=0.9.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
whatsup = "whatsup.cli:app"
wup = "whatsup.cli:quick_app"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.2",
]
lint = [
    "ruff>=0.0.289",
    "black>=23.9.1",
    "pre-commit>=3.4.0",
]
type = [
    "mypy>=1.5.1",
    "pyright>=1.1.327",
]

[tool.black]
line-length = 85
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
# Same as Black.
line-length = 85
src = ['src', 'tests']
select = ["E", "F"] #, "C4", "COM", "D1", "UP", "PT", "SIM", "SLF001", "FBT", "RUF", "RET", "I", "PLR"]
ignore = []
fixable = ["ALL"]

[tool.pyright]
include = ["src", "tests"]

pythonVersion = "3.11"

[tool.mypy]
include = ["src", "tests"]
